# my-rust-lang

./: README.md
dev/astix-website-tera/: Cargo.toml  README.md
dev/astix-website-tera/src/: main.rs
dev/astix-website-tera/static/styles/: main.css
dev/astix-website-tera/templates/include/: navbar.html
dev/astix-website-tera/templates/layout/: home_layout.html
dev/astix-website-tera/templates/pages/: home.html
dev/rust-json/: Cargo.toml
dev/rust-json/src/: main.rs
dev/rust-json2/: Cargo.toml
dev/rust-json2/data/: test.json
dev/rust-json2/src/: main.rs  parser.rs
dev/todo_app/: Cargo.toml  state.json
dev/todo_app/src/: main.rs
dev/todo_app/src/views/: mod.rs
dev/todo_app/src/views/to_do/: create.rs  get.rs  mod.rs
gpt-4/: README.md
gpt-4/ch-01/: Cargo.toml
gpt-4/ch-01-lib/: Cargo.toml
gpt-4/ch-01/src/: main.rs  my_func.rs
gpt-4/ch-01/src/my_other_fn/: fn_1.rs  mod.rs
gpt-4/ch-04/: Cargo.toml
gpt-4/ch-04/src/: main.rs
gpt-4/ch-05/: Cargo.toml
gpt-4/ch-05/src/: m1_enums.rs  m2_struct.rs  m3_traits.rs  m4_polymorphism.rs  m6_patterns.rs  m7_async.rs  m8_collections.rs  main.rs
gpt-4/ch-06/: Cargo.toml  increments.txt
gpt-4/ch-06-macros/: Cargo.toml
gpt-4/ch-06-macros/src/: lib.rs
gpt-4/ch-06/src/: m1_decl_macros.rs  m2_concurrency.rs  main.rs
gpt-4/ch-07-webserver/: Cargo.toml
gpt-4/ch-07-webserver/src/: main.rs
