[package]
name = "ch-07-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.72"
actix-cors = "0.6.4"
rand = "0.8.5"